--- a/main.html
+++ b/main.html
@@ -672,18 +672,11 @@
   { title:"CET NTPC Grad", sub:"RRB NTPC", tag:"Graduate", img:"cet.png", link:"cet-graduate-ssc-cgl-grad.html" },
   { title:"CET IBPS PO", sub:"Probationary Officer", tag:"Graduate", img:"cet.png", link:"cet-graduate-ssc-cgl-grad.html" },
   { title:"CET RRB PO", sub:"Scale-I", tag:"Graduate", img:"cet.png", link:"cet-graduate-ssc-cgl-grad.html" },
-  { title:"CET Grad Other", sub:"Govt Exams", tag:"Graduate", img:"cet.png", link:"cet-graduate-ssc-cgl-grad.html" },
-
-  /* ===== CET : INFO / NOTES ===== */
-  { title:"CET Validity", sub:"3 Years", tag:"Info", img:"cet.png", link:"cet-validity-special-notes.html" },
-  { title:"CET Syllabus", sub:"Pattern", tag:"Info", img:"cet.png", link:"cet-validity-special-notes.html" },
-  { title:"CET Next Stage", sub:"Mains / Skill", tag:"Info", img:"cet.png", link:"cet-validity-special-notes.html" }
+  { title:"CET Grad Other", sub:"Govt Exams", tag:"Graduate", img:"cet.png", link:"cet-graduate-ssc-cgl-grad.html" } 
 ],
    
 
-
-     
-                'SSC Exam': [
+ 'SSC Exam': [
   {
     title: "CGL",
     sub: "Graduate Level Exam",
