--- a/ssc-scientific-assistant-imd-examination.html
+++ b/ssc-scientific-assistant-imd-examination.html
@@ -283,9 +283,9 @@
     <div id="fixed-media-background"></div>
 
     <header class="iphone-header">
-        <div class="header-left"><img src="https://placehold.co/40x40/333/FFF?text=SSC" alt="Logo"></div>
+        <div class="header-left"><img src="sti.png" alt="Logo"></div>
         <div class="header-center">SSC-IMD<span></span></div>
-        <div class="header-right"><img src="https://placehold.co/40x40/333/FFF?text=User" alt="User" id="header-avatar"></div>
+        <div class="header-right"><img src="ytglogo.png" alt="User" id="header-avatar"></div>
     </header>
 
     <div class="iphone-dock-wrapper">
