--- a/ssc-constable-tradesman-examination.html
+++ b/ssc-constable-tradesman-examination.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -176,18 +177,34 @@
             background: var(--gold); border-radius: 50%; border: 3px solid #1A1C20;
         }
 
-        /* --- JOB CARDS GRID (Special Step 1 Design) --- */
-        .job-grid { display: grid; grid-cols-2 gap: 12px; margin-top: 15px; }
+        /* --- JOB CARDS GRID (FIXED FOR OVERFLOW) --- */
+        .job-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); /* Force strictly 2 columns */
+            gap: 10px; /* Reduced gap to prevent overflow */
+            margin-top: 15px;
+            width: 100%;
+        }
         .job-card {
-            background: #25282C; border: 1px solid rgba(255,215,0,0.2); border-radius: 14px;
-            padding: 15px; text-align: center; cursor: pointer; transition: 0.3s;
-            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            background: #25282C; 
+            border: 1px solid rgba(255,215,0,0.2); 
+            border-radius: 14px;
+            padding: 12px; 
+            text-align: center; 
+            cursor: pointer; 
+            transition: 0.3s;
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            justify-content: center;
+            min-height: 110px; /* Ensure uniform height */
+            box-sizing: border-box; /* Crucial for preventing overflow */
         }
         .job-card:hover { border-color: var(--gold); background: rgba(255,215,0,0.1); transform: translateY(-3px); }
         .job-icon { font-size: 2rem; margin-bottom: 8px; }
-        .job-title { font-weight: 700; color: #fff; font-size: 0.9rem; }
+        .job-title { font-weight: 700; color: #fff; font-size: 0.9rem; margin-bottom: 4px; }
         .job-badge { 
-            margin-top: 5px; font-size: 0.65rem; color: var(--gold); text-transform: uppercase; 
+            font-size: 0.65rem; color: var(--gold); text-transform: uppercase; 
             border: 1px solid var(--gold); padding: 2px 8px; border-radius: 10px;
         }
 
