--- a/rbi-grade-a-officer-assistant-manager-level.html
+++ b/rbi-grade-a-officer-assistant-manager-level.html
@@ -242,9 +242,9 @@
     <div id="fixed-media-background"></div>
 
     <header class="iphone-header">
-        <div class="header-left"><img src="rbi-logo.png" alt="Logo" onerror="this.src='https://placehold.co/40x40/333/FFF?text=R'"></div>
+        <div class="header-left"><img src="rbi-logo.png" alt="Logo" onerror="this.src='sti.png'"></div>
         <div class="header-center">RBI GRADE A<span></span></div>
-        <div class="header-right"><img src="user-icon.png" alt="User" onerror="this.src='https://placehold.co/40x40/333/FFF?text=U'"></div>
+        <div class="header-right"><img src="user-icon.png" alt="User" onerror="ytglogo.png'"></div>
     </header>
 
     <div class="iphone-dock-wrapper">
