--- a/rbi-assistant-clerical-level.html
+++ b/rbi-assistant-clerical-level.html
@@ -244,9 +244,9 @@
     <div id="fixed-media-background"></div>
 
     <header class="iphone-header">
-        <div class="header-left"><img src="rbi-logo.png" alt="Logo" onerror="this.src='https://placehold.co/40x40/333/FFF?text=R'"></div>
+        <div class="header-left"><img src="sti.png" alt="Logo" onerror="this.src='https://placehold.co/40x40/333/FFF?text=R'"></div>
         <div class="header-center">RBI ASSISTANT<span></span></div>
-        <div class="header-right"><img src="user-icon.png" alt="User" onerror="this.src='https://placehold.co/40x40/333/FFF?text=U'"></div>
+        <div class="header-right"><img src="ytglogo.png" alt="User" onerror="this.src='https://placehold.co/40x40/333/FFF?text=U'"></div>
     </header>
 
     <div class="iphone-dock-wrapper">
