--- a/main.html
+++ b/main.html
@@ -1033,46 +1033,46 @@
   { title:"Nagaland PSC", sub:"Nagaland PSC", tag:"State PSC", img:"stetpse.png", link:"nagaland-psc.html" },
   { title:"Sikkim PSC", sub:"Sikkim PSC", tag:"State PSC", img:"stetpse.png", link:"sikkim-psc.html" },
   { title:"Arunachal PSC", sub:"Arunachal PSC", tag:"State PSC", img:"stetpse.png", link:"arunachal-pradesh-psc.html" },
-  { title:"PPSC", sub:"Punjab PSC", tag:"State PSC", img:"stetpse.png", link:"punjab-psc.html" },
+  { title:"PPSC", sub:"Punjab PSC", tag:"State PSC", img:"stetpse.png", link:"#punjab-psc.html" },
 
   /* ===================== STATE SSC / SSB ===================== */
 
-  { title:"UPSSSC", sub:"UP Subordinate", tag:"State SSC", img:"stetpse.png", link:"upsssc.html" },
-  { title:"BSSC", sub:"Bihar SSC", tag:"State SSC", img:"stetpse.png", link:"bssc.html" },
-  { title:"RSMSSB", sub:"Rajasthan SSB", tag:"State SSC", img:"stetpse.png", link:"rsmssb.html" },
-  { title:"MPPEB", sub:"MP Vyapam", tag:"State SSC", img:"stetpse.png", link:"mppeb.html" },
-  { title:"HSSC", sub:"Haryana SSC", tag:"State SSC", img:"stetpse.png", link:"hssc.html" },
-  { title:"UKSSSC", sub:"UK Subordinate", tag:"State SSC", img:"stetpse.png", link:"uksssc.html" },
-  { title:"JSSC", sub:"Jharkhand SSC", tag:"State SSC", img:"stetpse.png", link:"jssc.html" },
-  { title:"HPSSSB", sub:"HP SSB", tag:"State SSC", img:"stetpse.png", link:"hpsssb.html" },
-  { title:"WBSSC", sub:"WB SSC", tag:"State SSC", img:"stetpse.png", link:"wbssc.html" },
-  { title:"OSSSC", sub:"Odisha SSC", tag:"State SSC", img:"stetpse.png", link:"osssc.html" },
-  { title:"CG Vyapam", sub:"CG Board", tag:"State SSC", img:"stetpse.png", link:"cgvyapam.html" },
-  { title:"KEA", sub:"Karnataka Exams", tag:"State SSC", img:"stetpse.png", link:"kea.html" },
+  { title:"UPSSSC", sub:"UP Subordinate", tag:"State SSC", img:"stetpse.png", link:"#upsssc.html" },
+  { title:"BSSC", sub:"Bihar SSC", tag:"State SSC", img:"stetpse.png", link:"#bssc.html" },
+  { title:"RSMSSB", sub:"Rajasthan SSB", tag:"State SSC", img:"stetpse.png", link:"#rsmssb.html" },
+  { title:"MPPEB", sub:"MP Vyapam", tag:"State SSC", img:"stetpse.png", link:"#mppeb.html" },
+  { title:"HSSC", sub:"Haryana SSC", tag:"State SSC", img:"stetpse.png", link:"#hssc.html" },
+  { title:"UKSSSC", sub:"UK Subordinate", tag:"State SSC", img:"stetpse.png", link:"#uksssc.html" },
+  { title:"JSSC", sub:"Jharkhand SSC", tag:"State SSC", img:"stetpse.png", link:"#jssc.html" },
+  { title:"HPSSSB", sub:"HP SSB", tag:"State SSC", img:"stetpse.png", link:"#hpsssb.html" },
+  { title:"WBSSC", sub:"WB SSC", tag:"State SSC", img:"stetpse.png", link:"#wbssc.html" },
+  { title:"OSSSC", sub:"Odisha SSC", tag:"State SSC", img:"stetpse.png", link:"#osssc.html" },
+  { title:"CG Vyapam", sub:"CG Board", tag:"State SSC", img:"stetpse.png", link:"#cgvyapam.html" },
+  { title:"KEA", sub:"Karnataka Exams", tag:"State SSC", img:"stetpse.png", link:"#kea.html" },
 
   /* ===================== OTHER STATE EXAMS ===================== */
 
-  { title:"State Police", sub:"SI / Constable", tag:"State", img:"stetpse.png", link:"state-police.html" },
-  { title:"Judiciary", sub:"Civil Judge", tag:"State", img:"stetpse.png", link:"state-judiciary.html" },
-  { title:"State TET", sub:"Teacher Exams", tag:"State", img:"stetpse.png", link:"state-teacher.html" },
-  { title:"State Engg", sub:"AE / JE", tag:"State", img:"stetpse.png", link:"state-engineering.html" },
-  { title:"State Health", sub:"Medical Jobs", tag:"State", img:"stetpse.png", link:"state-health.html" }
+  { title:"State Police", sub:"SI / Constable", tag:"State", img:"stetpse.png", link:"#state-police.html" },
+  { title:"Judiciary", sub:"Civil Judge", tag:"State", img:"stetpse.png", link:"#state-judiciary.html" },
+  { title:"State TET", sub:"Teacher Exams", tag:"State", img:"stetpse.png", link:"#state-teacher.html" },
+  { title:"State Engg", sub:"AE / JE", tag:"State", img:"stetpse.png", link:"#state-engineering.html" },
+  { title:"State Health", sub:"Medical Jobs", tag:"State", img:"stetpse.png", link:"#state-health.html" }
 ],
 
 'District Exam':[
-  { title:"आंध्र", sub:"Andhra Pradesh", tag:"State", img:"districtsexam.png", link:"andhra_pradesh.html" },
-  { title:"अरुणाचल", sub:"Arunachal", tag:"State", img:"districtsexam.png", link:"arunachal_pradesh.html" },
-  { title:"असम", sub:"Assam", tag:"State", img:"districtsexam.png", link:"assam.html" },
-  { title:"बिहार", sub:"Bihar", tag:"State", img:"districtsexam.png", link:"bihar.html" },
-  { title:"छत्तीसगढ़", sub:"Chhattisgarh", tag:"State", img:"districtsexam.png", link:"chhattisgarh.html" },
-  { title:"गोवा", sub:"Goa", tag:"State", img:"districtsexam.png", link:"goa.html" },
-  { title:"गुजरात", sub:"Gujarat", tag:"State", img:"districtsexam.png", link:"gujarat.html" },
-  { title:"हरियाणा", sub:"Haryana", tag:"State", img:"districtsexam.png", link:"haryana.html" },
-  { title:"हिमाचल", sub:"Himachal", tag:"State", img:"districtsexam.png", link:"himachal_pradesh.html" },
-  { title:"झारखंड", sub:"Jharkhand", tag:"State", img:"districtsexam.png", link:"jharkhand.html" },
-  { title:"कर्नाटक", sub:"Karnataka", tag:"State", img:"districtsexam.png", link:"karnataka.html" },
+  { title:"आंध्र", sub:"Andhra Pradesh", tag:"State", img:"districtsexam.png", link:"#andhra_pradesh.html" },
+  { title:"अरुणाचल", sub:"Arunachal", tag:"State", img:"districtsexam.png", link:"#arunachal_pradesh.html" },
+  { title:"असम", sub:"Assam", tag:"State", img:"districtsexam.png", link:"#assam.html" },
+  { title:"बिहार", sub:"Bihar", tag:"State", img:"districtsexam.png", link:"#bihar.html" },
+  { title:"छत्तीसगढ़", sub:"Chhattisgarh", tag:"State", img:"districtsexam.png", link:"#chhattisgarh.html" },
+  { title:"गोवा", sub:"Goa", tag:"State", img:"districtsexam.png", link:"#goa.html" },
+  { title:"गुजरात", sub:"Gujarat", tag:"State", img:"districtsexam.png", link:"#gujarat.html" },
+  { title:"हरियाणा", sub:"Haryana", tag:"State", img:"districtsexam.png", link:"#haryana.html" },
+  { title:"हिमाचल", sub:"Himachal", tag:"State", img:"districtsexam.png", link:"#himachal_pradesh.html" },
+  { title:"झारखंड", sub:"Jharkhand", tag:"State", img:"districtsexam.png", link:"#jharkhand.html" },
+  { title:"कर्नाटक", sub:"Karnataka", tag:"State", img:"districtsexam.png", link:"#karnataka.html" },
   { title:"केरल", sub:"Kerala", tag:"State", img:"districtsexam.png", link:"kerala.html" },
-  { title:"म.प्र.", sub:"Madhya Pradesh", tag:"State", img:"districtsexam.png", link:"madhya_pradesh.html" },
+  { title:"म.प्र.", sub:"Madhya Pradesh", tag:"State", img:"districtsexam.png", link:"#madhya_pradesh.html" },
   { title:"महाराष्ट्र", sub:"Maharashtra", tag:"State", img:"districtsexam.png", link:"maharashtra.html" },
   { title:"मणिपुर", sub:"Manipur", tag:"State", img:"districtsexam.png", link:"manipur.html" },
   { title:"मेघालय", sub:"Meghalaya", tag:"State", img:"districtsexam.png", link:"meghalaya.html" },
