--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
      SEO META TAGS (2026 READY)
 ========================== -->
 
-<title>SkillAura AI App – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
+<title>STISkilli – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
 
 <meta name="description" content="SkillAura AI App – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download SkillAura AI App now from Google Play Store.">
 
