--- a/main.html
+++ b/main.html
@@ -1037,26 +1037,26 @@
 
   /* ===================== STATE SSC / SSB ===================== */
 
-  { title:"UPSSSC", sub:"UP Subordinate", tag:"State SSC", img:"stetpse.png", link:"#upsssc.html" },
-  { title:"BSSC", sub:"Bihar SSC", tag:"State SSC", img:"stetpse.png", link:"#bssc.html" },
-  { title:"RSMSSB", sub:"Rajasthan SSB", tag:"State SSC", img:"stetpse.png", link:"#rsmssb.html" },
-  { title:"MPPEB", sub:"MP Vyapam", tag:"State SSC", img:"stetpse.png", link:"#mppeb.html" },
-  { title:"HSSC", sub:"Haryana SSC", tag:"State SSC", img:"stetpse.png", link:"#hssc.html" },
-  { title:"UKSSSC", sub:"UK Subordinate", tag:"State SSC", img:"stetpse.png", link:"#uksssc.html" },
-  { title:"JSSC", sub:"Jharkhand SSC", tag:"State SSC", img:"stetpse.png", link:"#jssc.html" },
-  { title:"HPSSSB", sub:"HP SSB", tag:"State SSC", img:"stetpse.png", link:"#hpsssb.html" },
-  { title:"WBSSC", sub:"WB SSC", tag:"State SSC", img:"stetpse.png", link:"#wbssc.html" },
-  { title:"OSSSC", sub:"Odisha SSC", tag:"State SSC", img:"stetpse.png", link:"#osssc.html" },
-  { title:"CG Vyapam", sub:"CG Board", tag:"State SSC", img:"stetpse.png", link:"#cgvyapam.html" },
-  { title:"KEA", sub:"Karnataka Exams", tag:"State SSC", img:"stetpse.png", link:"#kea.html" },
+  { title:"UPSSSC", sub:"UP Subordinate", tag:"State SSC", img:"stetpse.png", link:"upsssc.html" },
+  { title:"BSSC", sub:"Bihar SSC", tag:"State SSC", img:"stetpse.png", link:"bssc.html" },
+  { title:"RSMSSB", sub:"Rajasthan SSB", tag:"State SSC", img:"stetpse.png", link:"rsmssb.html" },
+  { title:"MPPEB", sub:"MP Vyapam", tag:"State SSC", img:"stetpse.png", link:"mppeb.html" },
+  { title:"HSSC", sub:"Haryana SSC", tag:"State SSC", img:"stetpse.png", link:"hssc.html" },
+  { title:"UKSSSC", sub:"UK Subordinate", tag:"State SSC", img:"stetpse.png", link:"uksssc.html" },
+  { title:"JSSC", sub:"Jharkhand SSC", tag:"State SSC", img:"stetpse.png", link:"jssc.html" },
+  { title:"HPSSSB", sub:"HP SSB", tag:"State SSC", img:"stetpse.png", link:"hpsssb.html" },
+  { title:"WBSSC", sub:"WB SSC", tag:"State SSC", img:"stetpse.png", link:"wbssc.html" },
+  { title:"OSSSC", sub:"Odisha SSC", tag:"State SSC", img:"stetpse.png", link:"osssc.html" },
+  { title:"CG Vyapam", sub:"CG Board", tag:"State SSC", img:"stetpse.png", link:"cgvyapam.html" },
+  { title:"KEA", sub:"Karnataka Exams", tag:"State SSC", img:"stetpse.png", link:"kea.html" },
 
   /* ===================== OTHER STATE EXAMS ===================== */
 
-  { title:"State Police", sub:"SI / Constable", tag:"State", img:"stetpse.png", link:"#state-police.html" },
-  { title:"Judiciary", sub:"Civil Judge", tag:"State", img:"stetpse.png", link:"#state-judiciary.html" },
-  { title:"State TET", sub:"Teacher Exams", tag:"State", img:"stetpse.png", link:"#state-teacher.html" },
-  { title:"State Engg", sub:"AE / JE", tag:"State", img:"stetpse.png", link:"#state-engineering.html" },
-  { title:"State Health", sub:"Medical Jobs", tag:"State", img:"stetpse.png", link:"#state-health.html" }
+  { title:"State Police", sub:"SI / Constable", tag:"State", img:"stetpse.png", link:"state-police.html" },
+  { title:"Judiciary", sub:"Civil Judge", tag:"State", img:"stetpse.png", link:"state-judiciary.html" },
+  { title:"State TET", sub:"Teacher Exams", tag:"State", img:"stetpse.png", link:"state-teacher.html" },
+  { title:"State Engg", sub:"AE / JE", tag:"State", img:"stetpse.png", link:"state-engineering.html" },
+  { title:"State Health", sub:"Medical Jobs", tag:"State", img:"stetpse.png", link:"state-health.html" }
 ],
 
 'District Exam':[
