--- a/agniveer-indian-army.html
+++ b/agniveer-indian-army.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agniveer Recruitment (Army): A Complete Guide</title>
+    <script src="/app-redirect.js"></script>
     <script src="redirect_if_needed.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
