--- a/andhra_pradesh.html
+++ b/andhra_pradesh.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andhra Pradesh District Level Jobs Guide (All Departments)</title>
+    <script src="/app-redirect.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
