--- a/govt-all-services.html
+++ b/govt-all-services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>सरकारी परीक्षाओं की गाइड</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="redirect_if_needed.js"></script>
+    <script src="/app-redirect.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Noto+Sans+Devanagari:wght@400;500;700&display=swap" rel="stylesheet">
