--- a/main.html
+++ b/main.html
@@ -5,24 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
    <!-- =========================
      SEO META TAGS (2026 READY)
-========================== -->
-
-<title>STISkilli – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
-
-<meta name="description" content="SkillAura AI App – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download SkillAura AI App now from Google Play Store.">
-
+         ========================== -->
+ <title>STISkilli – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
+ <script src="/app-redirect.js"></script>
+ <meta name="description" content="SkillAura AI App – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download SkillAura AI App now from Google Play Store.">
 <meta name="keywords" content="SkillAura AI, SkillAura App, AI Career Guide App, Government Exams App, AI Tools App, Job Alert App India, Sarkari Naukri App, Competitive Exam App, Education AI App, Career Planning App 2026">
-
 <meta name="author" content="SkillAura AI">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="googlebot" content="index, follow">
-
 <!-- VIEWPORT -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
 <!-- CANONICAL (APP LINK USED) -->
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
-
 <!-- =========================
      OPEN GRAPH (SOCIAL SEO)
 ========================== -->
@@ -32,7 +26,6 @@
 <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
 <meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <meta property="og:site_name" content="SkillAura AI">
-
 <!-- =========================
      TWITTER / X SEO
 ========================== -->
@@ -40,7 +33,6 @@
 <meta name="twitter:title" content="SkillAura AI App – Future Career & Exam Guide">
 <meta name="twitter:description" content="AI powered Government Exam, Job & Career Guide App. Download SkillAura AI from Google Play Store.">
 <meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-
 <!-- =========================
      APP DEEP LINK SEO
 ========================== -->
@@ -48,10 +40,8 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#F4C430">
-
 <!-- ANDROID APP INDEXING -->
 <link rel="alternate" href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
-
 <!-- =========================
      STRUCTURED DATA (JSON-LD)
 ========================== -->
