--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Skilli | Loading...</title>
+     <script src="/app-redirect.js"></script>
     <!-- Tailwind for modern utilities -->
     <script src="https://cdn.tailwindcss.com"></script>
-    
     <!-- Professional Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Manrope:wght@700;800&display=swap" rel="stylesheet">
-    
     <style>
         :root {
             /* Skilli Gold Theme mapped to Lully Structure */
