--- a/jag.html
+++ b/jag.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAG Entry: A Complete Guide for Law Graduates</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="redirect_if_needed.js"></script>
+    <script src="/app-redirect.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
