--- a/karnataka-board.html
+++ b/karnataka-board.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>कर्नाटक बोर्ड परीक्षा मार्गदर्शिका</title>
-    <script src="redirect_if_needed.js"></script>
+    <script src="/app-redirect.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Noto+Sans+Devanagari:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Kannada:wght@400;500;700&display=swap" rel="stylesheet">
-    
     <meta name="description" content="कर्नाटक माध्यमिक शिक्षा परीक्षा बोर्ड (KSEEB) कक्षा 10 और 12 की परीक्षाओं के लिए एक विस्तृत मार्गदर्शिका, जिसमें परीक्षा पैटर्न, पाठ्यक्रम, तैयारी के टिप्स और महत्वपूर्ण जानकारी शामिल है।">
     <meta name="keywords" content="Karnataka Board, KSEEB, SSLC, PUC, Class 10, Class 12, Exam, Syllabus, Preparation, Guide, Hindi, English, Kannada, Maths, Science, Social Science, Physics, Chemistry, Biology">
     <meta name="author" content="Karnataka Board Exams Guide">
-    
     <style>
         /* New Style Design for KSEEB */
         body {
