--- a/kerala-board.html
+++ b/kerala-board.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>केरल बोर्ड परीक्षा मार्गदर्शिका</title>
-    <script src="redirect_if_needed.js"></script>
+    <script src="/app-redirect.js"></script>
     <!-- Tailwind CSS for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chart.js for the pie chart -->
