--- a/kerala.html
+++ b/kerala.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kerala District Level Jobs Guide (All Departments)</title>
-  <script src="redirect_if_needed.js"></script>  
+  <script src="/app-redirect.js"></script> 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Chart.js CDN for visual data -->
