--- a/mizoram.html
+++ b/mizoram.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="redirect_if_needed.js"></script>  
+    <script src="/app-redirect.js"></script>  
     <title>Mizoram District Level Jobs Guide (All Departments)</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
