--- a/tamilnadu-board.html
+++ b/tamilnadu-board.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TN Board – தமிழ்நாடு மாநில माध्यमिक மற்றும் உயர் माध्यमिक கல்வி வாரியம்</title>
-    <script src="redirect_if_needed.js"></script>
+    <script src="/app-redirect.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
