--- a/west-bengal-board.html
+++ b/west-bengal-board.html
@@ -4,24 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WBBSE/WBCHSE – पश्चिम बंगाल माध्यमिक एवं उच्च माध्यमिक शिक्षा बोर्ड</title>
+    <script src="/app-redirect.js"></script>
     <!-- =========================
      SEO META TAGS (2026 READY)
 ========================== -->
-
 <meta name="description" content="SkillAura AI App – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download SkillAura AI App now from Google Play Store.">
-
 <meta name="keywords" content="SkillAura AI, SkillAura App, AI Career Guide App, Government Exams App, AI Tools App, Job Alert App India, Sarkari Naukri App, Competitive Exam App, Education AI App, Career Planning App 2026">
-
 <meta name="author" content="SkillAura AI">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="googlebot" content="index, follow">
-
 <!-- VIEWPORT -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
 <!-- CANONICAL (APP LINK USED) -->
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
-
 <!-- =========================
      OPEN GRAPH (SOCIAL SEO)
 ========================== -->
@@ -31,7 +26,6 @@
 <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
 <meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <meta property="og:site_name" content="SkillAura AI">
-
 <!-- =========================
      TWITTER / X SEO
 ========================== -->
@@ -39,7 +33,6 @@
 <meta name="twitter:title" content="SkillAura AI App – Future Career & Exam Guide">
 <meta name="twitter:description" content="AI powered Government Exam, Job & Career Guide App. Download SkillAura AI from Google Play Store.">
 <meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-
 <!-- =========================
      APP DEEP LINK SEO
 ========================== -->
@@ -47,10 +40,8 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#F4C430">
-
 <!-- ANDROID APP INDEXING -->
 <link rel="alternate" href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
-
 <!-- =========================
      STRUCTURED DATA (JSON-LD)
 ========================== -->
@@ -75,19 +66,16 @@
   "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share"
 }
 </script>
-
 <!-- =========================
      PERFORMANCE & AI SEARCH
 ========================== -->
 <meta name="referrer" content="strict-origin-when-cross-origin">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="format-detection" content="telephone=no">
-
 <!-- =========================
      FAVICON
 ========================== -->
 <link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
-
     <script src="redirect_if_needed.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -95,11 +83,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Noto+Sans+Devanagari:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;500;700&display=swap" rel="stylesheet">
-    
     <meta name="description" content="पश्चिम बंगाल बोर्ड ऑफ सेकेंडरी एजुकेशन (WBBSE) और वेस्ट बंगाल काउंसिल ऑफ हायर सेकेंडरी एजुकेशन (WBCHSE) कक्षा 10 और 12 की परीक्षाओं के लिए एक विस्तृत मार्गदर्शिका, जिसमें परीक्षा पैटर्न, पाठ्यक्रम, तैयारी के टिप्स और महत्वपूर्ण जानकारी शामिल है।">
     <meta name="keywords" content="WBBSE, WBCHSE, West Bengal Board, Class 10, Class 12, Madhyamik, Uccha Madhyamik, Exam, Syllabus, Preparation, Guide, Hindi, English, Bengali, Maths, Science, Social Science, Physics, Chemistry, Biology">
     <meta name="author" content="WBBSE/WBCHSE Exams Guide">
-    
     <style>
         /* Ultra Pro Max Style Design */
         body {
