--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
          ========================== -->
  <title>STISkilli – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
  <script src="/app-redirect.js"></script>
- <meta name="description" content="SkillAura AI App – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download SkillAura AI App now from Google Play Store.">
-<meta name="keywords" content="SkillAura AI, SkillAura App, AI Career Guide App, Government Exams App, AI Tools App, Job Alert App India, Sarkari Naukri App, Competitive Exam App, Education AI App, Career Planning App 2026">
+ <meta name="description" content="StiSkilli – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download StiSkilli App now from Google Play Store.">
+<meta name="keywords" content="StiSkilli,Career Guide App, Government Exams App, AI Tools App, Job Alert App India, Sarkari Naukri App, Competitive Exam App, Education AI App, Career Planning App 2026">
 <meta name="author" content="SkillAura AI">
 <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 <meta name="googlebot" content="index, follow">
