--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
      SEO META TAGS (2026 READY)
          ========================== -->
  <title>STISkilli – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
-
+<script src="/app-redirect.js"></script>
  <meta name="description" content="StiSkilli – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download StiSkilli App now from Google Play Store.">
 <meta name="keywords" content="StiSkilli,Career Guide App, Government Exams App, AI Tools App, Job Alert App India, Sarkari Naukri App, Competitive Exam App, Education AI App, Career Planning App 2026">
 <meta name="author" content="StiSkilli">
