--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1088,7 +1088,7 @@
                     <!-- Quiz Header -->
                     <div class="quiz-header">
                         <div>
-                            <h2 class="text-2xl font-bold text-white">UPSC C.A</h2>
+                            <h2 class="text-2xl font-bold text-white">Current-Affairs</h2>
                             <p class="text-gray-400 text-sm">Test your knowledge with 1000+ questions</p>
                         </div>
                         <div class="quiz-stats">
