--- a/upsc-ese-ies-engineering-services-exam.html
+++ b/upsc-ese-ies-engineering-services-exam.html
@@ -3,8 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>UPSC ESE/IES Engineering Services Exam 2026 | StiSkilli</title>
-    <script src="/app-redirect.js"></script>
+    <title>UPSC ESE / IES Preparation App 2026 – Engineering Services | StiSkilli</title>
+<script src="/app-redirect.js"></script>
+<meta name="description" content="Prepare for UPSC Engineering Services Examination (ESE/IES) 2026 with StiSkilli App. Complete guidance for Civil, Mechanical, Electrical & Electronics Engineering including Prelims, Mains, Interview, PYQs, Strategy & Career Roadmap. Download StiSkilli App now.">
+<meta name="keywords" content="UPSC ESE App, IES Preparation App, Engineering Services Exam 2026, UPSC ESE Civil Mechanical Electrical Electronics, ESE Prelims Mains Interview App, IES Study App India, Engineering UPSC App">
+<meta name="author" content="StiSkilli">
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+<meta name="googlebot" content="index, follow">
+<!-- VIEWPORT -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<!-- =========================
+CANONICAL (APP ONLY)
+========================== -->
+<link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<!-- =========================
+     OPEN GRAPH (ESE / IES)
+========================== -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="UPSC ESE / IES Preparation App – Engineering Services | StiSkilli">
+<meta property="og:description" content="One App for Complete UPSC ESE / IES Preparation – Prelims, Mains, Interview, Branch-wise Strategy & Career Growth. Download StiSkilli App from Google Play Store.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<meta property="og:site_name" content="StiSkilli">
+<!-- =========================
+     TWITTER / X SEO
+========================== -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="UPSC ESE / IES Preparation App 2026 | StiSkilli">
+<meta name="twitter:description" content="Engineering Services Exam preparation for Civil, Mechanical, Electrical & E&T engineers. Prelims, Mains & Interview guidance in one app.">
+<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<!-- =========================
+     APP DEEP LINK SEO
+========================== -->
+<meta name="application-name" content="StiSkilli">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="theme-color" content="#00E5FF">
+<!-- ANDROID APP INDEXING -->
+<link rel="alternate"
+href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
+<!-- =========================
+     STRUCTURED DATA (ESE APP)
+========================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MobileApplication",
+  "name": "StiSkilli UPSC ESE / IES Preparation App",
+  "operatingSystem": "Android",
+  "applicationCategory": "EducationApplication",
+  "description": "StiSkilli is an AI-powered UPSC Engineering Services (ESE/IES) preparation app for Civil, Mechanical, Electrical and Electronics engineers covering Prelims, Mains, Interview, PYQs and career roadmap.",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "INR"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "ratingCount": "100000"
+  },
+  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
+}
+</script>
+<!-- =========================
+     PERFORMANCE
+========================== -->
+<meta name="referrer" content="strict-origin-when-cross-origin">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="telephone=no">
+<!-- =========================
+     FAVICON
+========================== -->
+<link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
