--- a/upsc-ese-ies-engineering-services-exam.html
+++ b/upsc-ese-ies-engineering-services-exam.html
@@ -60,8 +60,8 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
   },
   "aggregateRating": {
     "@type": "AggregateRating",
-    "ratingValue": "4.9",
-    "ratingCount": "100000"
+    "ratingValue": "",
+    "ratingCount": ""
   },
   "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
 }
