--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -35,6 +35,26 @@
 <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
 <meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <meta property="og:site_name" content="StiSkilli">
+    <!-- =========================
+     FACEBOOK OPEN GRAPH
+========================== -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="UPSC CAPF AC Preparation App – Assistant Commandant | StiSkilli">
+<meta property="og:description" content="One App for Complete UPSC CAPF Preparation – Written Exam, Physical Test, Interview, PYQs, Strategy & Officer Career Path. Download StiSkilli App now.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<meta property="og:site_name" content="StiSkilli">
+
+<!-- FACEBOOK PAGE / APP -->
+<meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID">
+<meta property="article:author" content="https://www.facebook.com/YOUR_FB_PAGE_NAME">
+
+<!-- =========================
+     INSTAGRAM META
+========================== -->
+<meta name="instagram:site" content="https://www.instagram.com/stiworld01?igsh=MThwbW9sMjRnejl2cg%3D%3D&utm_source=qr">
+<meta name="instagram:creator" content="">
+<!-- ========================= 
 
 <!-- =========================
      TWITTER / X SEO
