--- a/main.html
+++ b/main.html
@@ -196,23 +196,23 @@
 
         /* --- BACKGROUNDS (Updated Govt Image) --- */
         #modal-govt .modal-box { 
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1532375810709-75b1da00537c?q=80&w=1000'); 
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('skilligovtbck.png'); 
             background-blend-mode: normal;
         }
         #modal-private .modal-box { 
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1497366754035-f200968a6e72?q=80&w=1000'); 
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('skillipvtbck.png'); 
             background-blend-mode: normal;
         }
         #modal-ai .modal-box { 
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('allai.png'); 
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('skilliaibck.png'); 
             background-blend-mode: normal;
         }
         #modal-trending .modal-box { 
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=1000'); 
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('skillirequirebck.png'); 
             background-blend-mode: normal;
         }
         #modal-news .modal-box { 
-            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1504711434969-e33886168f5c?q=80&w=1000'); 
+            background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('skillinewsbck.png'); 
             background-blend-mode: normal;
         }
 
