--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
 
         <!-- STI Skilli Text -->
-        <h1 class="brand-title">STI-Skilli</h1>
+        <h1 class="brand-title">STISkilli</h1>
         <p class="tagline">Your True Guide</p>
 
         <div class="loader-zone">
