--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>STISkilli – Ultra Pro Max 2026</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
@@ -19,17 +19,16 @@
             --footer-height: 75px; 
         }
 
-        /* --- GLOBAL RESET --- */
-        html { scroll-behavior: smooth; }
-        body {
+        /* --- GLOBAL RESET (FIXED SCROLL ISSUE) --- */
+        html, body {
+            margin: 0; padding: 0;
+            width: 100%; height: 100dvh; /* Dynamic Viewport Height */
+            overflow: hidden; /* Stops body scroll */
+            position: fixed; /* Locks the page in place */
             font-family: 'Plus Jakarta Sans', sans-serif;
             background-color: #000;
             color: #fff;
-            margin: 0;
-            overflow: hidden; 
-            height: 100vh;
-            width: 100vw;
-            perspective: 1000px;
+            overscroll-behavior: none; /* Stops bounce effect */
         }
 
         /* --- UNIVERSE BACKGROUND --- */
@@ -89,11 +88,16 @@
         }
         .dock-item.active i { transform: scale(1.1); filter: drop-shadow(0 0 5px var(--primary)); }
 
-        /* --- MAIN MODAL --- */
+        /* --- MAIN MODAL (Scroll Container) --- */
+        /* This handles layout between header and footer */
         .modal-overlay { 
-            position: fixed; top: calc(var(--header-height) + 30px); 
+            position: fixed; 
+            top: calc(var(--header-height) + 30px); 
             bottom: calc(var(--footer-height) + 35px); 
-            left: 0; right: 0; z-index: 2500; display: none; justify-content: center; padding: 0 10px; pointer-events: none; 
+            left: 0; right: 0; 
+            z-index: 2500; 
+            display: none; justify-content: center; 
+            padding: 0 10px; pointer-events: none; /* Allows click through if needed, but box catches events */
         }
         .flex-modal { display: flex !important; animation: fadeIn 0.4s ease-out forwards; }
         .hidden-modal { display: none !important; }
@@ -101,8 +105,8 @@
 
         /* Modal Box Styling */
         .modal-box { 
-            pointer-events: auto; 
-            background-color: #111; /* Fallback color */
+            pointer-events: auto; /* Re-enable clicks inside box */
+            background-color: #111; 
             background-size: cover; background-position: center; background-repeat: no-repeat;
             border-radius: 30px; 
             width: 100%; max-width: 1400px; height: 100%; padding: 15px; 
@@ -116,21 +120,21 @@
             margin-bottom: 15px; flex-shrink: 0;
         }
 
-        /* Reduced Width & Height Heading */
+        /* Compact Heading */
         .modal-header { 
             text-align: center; 
             background: rgba(0,0,0,0.6); 
-            padding: 8px 25px; /* Reduced Padding */
-            border-radius: 50px; /* Pill Shape */
+            padding: 8px 25px;
+            border-radius: 50px;
             backdrop-filter: blur(5px); 
             border: 1px solid rgba(255,255,255,0.1); 
             margin-bottom: 10px;
-            width: fit-content; /* Auto Width */
-            min-width: 200px;
+            width: fit-content;
+            min-width: 180px;
         }
 
         .modal-header h2 { 
-            font-family: 'Rajdhani'; font-weight: 900; font-size: 1.5rem; /* Reduced Font Size */
+            font-family: 'Rajdhani'; font-weight: 900; font-size: 1.5rem;
             color: #fff; text-shadow: 0 0 15px rgba(255, 215, 0, 0.8); 
             margin: 0; letter-spacing: 1px; text-transform: uppercase;
         }
@@ -138,7 +142,6 @@
         /* Types Bar with Golden Border */
         .sub-nav { 
             background: rgba(0,0,0,0.7); 
-            /* Golden Border Class applied via JS/HTML, but styles here ensure layout */
             border-radius: 20px; padding: 8px; 
             display: flex; gap: 8px; overflow-x: auto; 
             scrollbar-width: none; white-space: nowrap;
@@ -154,9 +157,12 @@
             box-shadow: 0 0 20px rgba(244, 196, 48, 0.4); font-weight: 800;
         }
 
-        /* --- CARDS GRID --- */
+        /* --- SCROLLABLE CARDS GRID --- */
         .grid-container { 
-            flex-grow: 1; overflow-y: auto; padding: 5px; 
+            flex-grow: 1; 
+            overflow-y: auto; /* ONLY this scrolls */
+            -webkit-overflow-scrolling: touch;
+            padding: 5px; 
             display: grid; grid-template-columns: repeat(2, 1fr); gap: 10px;
             padding-bottom: 20px;
         }
@@ -191,10 +197,12 @@
         .card-sub { font-size: 0.6rem; color: #ccc; text-transform: uppercase; margin-top: 2px; font-weight: 600; }
         .card-action { margin-top: auto; font-size: 0.55rem; text-align: right; color: var(--primary); font-weight: 800; letter-spacing: 1px; }
 
-        /* --- LANGUAGE POPUP --- */
+        /* --- LANGUAGE POPUP (UPDATED VISIBILITY) --- */
         #lang-popup {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9); backdrop-filter: blur(20px);
+            /* Semi-transparent background so Header/Footer stay visible */
+            background: rgba(0,0,0,0.5); 
+            backdrop-filter: blur(5px);
             z-index: 9999; display: none; align-items: center; justify-content: center;
         }
         #lang-popup.active { display: flex; animation: popIn 0.3s forwards; }
@@ -203,7 +211,7 @@
         .popup-card {
             width: 85%; max-width: 380px;
             background: linear-gradient(160deg, #151515, #000);
-            border: 2px solid var(--primary); box-shadow: 0 0 60px rgba(244, 196, 48, 0.3);
+            border: 2px solid var(--primary); box-shadow: 0 0 60px rgba(244, 196, 48, 0.4);
             border-radius: 26px; padding: 25px; text-align: center; position: relative;
         }
         .popup-img { 
@@ -282,7 +290,6 @@
     </div>
 
     <script>
-        /* CONFIGURATION: Background Images for each category */
         const categoryBackgrounds = {
             govt: 'skilligovtbck.png',
             private: 'skillipvtbck.png',
@@ -291,7 +298,6 @@
             news: 'skillinewsbck.png'
         };
 
-        /* DATA BASE (Dual Links) */
         const dataBase = {
             govt: {
                 'UPSC Exam': [
@@ -328,26 +334,20 @@
             }
         };
 
-        // --- RENDER LOGIC ---
         function openCategory(catName, btnElement) {
-            // 1. Highlight Only The Clicked Footer Icon
-            // If function is called by click, 'btnElement' is 'this'
-            // If called automatically, we find it by ID
+            // Highlight Logic: If clicked (btnElement exists), use it. Else default logic.
             if (btnElement) {
                 document.querySelectorAll('.dock-item').forEach(el => el.classList.remove('active'));
                 btnElement.classList.add('active');
             }
 
-            // 2. Set Background Image (100% Visibility)
             const modalBox = document.getElementById('dynamic-modal-box');
             const bgImage = categoryBackgrounds[catName] || 'skilligovtbck.png';
             modalBox.style.backgroundImage = `url('${bgImage}')`;
 
-            // 3. Update Title
-            const titles = { govt: "GOVERNMENT EXAMS", private: "PRIVATE JOBS", ai: "AI TOOLS", trending: "TRENDING", news: "LATEST NEWS" };
+            const titles = { govt: "GOVT EXAMS", private: "PVT JOBS", ai: "AI TOOLS", trending: "TRENDING", news: "NEWS" };
             document.getElementById('cat-title').innerText = titles[catName];
 
-            // 4. Render Sub Nav & Cards
             const subNav = document.getElementById('sub-nav-container');
             const subKeys = Object.keys(dataBase[catName] || {});
             
@@ -358,7 +358,7 @@
                 renderCards(catName, subKeys[0]);
             } else {
                 subNav.innerHTML = '';
-                document.getElementById('cards-grid').innerHTML = '<div style="color:#fff; text-align:center; width:200%; padding-top:40px; text-shadow:0 0 10px #000;">No Data Available</div>';
+                document.getElementById('cards-grid').innerHTML = '<div style="color:#fff; text-align:center; width:200%; padding-top:40px;">No Data Available</div>';
             }
         }
 
@@ -411,7 +411,7 @@
             if(e.target === this) closePopup();
         });
 
-        // Initialize Default State (Govt)
+        // Initialize Default State
         window.addEventListener('DOMContentLoaded', () => {
             const defaultBtn = document.getElementById('nav-govt');
             if(defaultBtn) {
