--- a/main.html
+++ b/main.html
@@ -3,8 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>STISkilli – Ultra Pro Max 2026</title>
-    
+    <title>STISkilli – Government Exams, AI Tools, Jobs & Career Guide 2026</title>
+<script src="/app-redirect.js"></script>
+ <meta name="description" content="StiSkilli – India’s smart career & exam guide for Government Jobs, AI Tools, Private Jobs, Latest Recruitment, News & Education. Download StiSkilli App now from Google Play Store.">
+<meta name="keywords" content="StiSkilli,Career Guide App, Government Exams App, AI Tools App, Job Alert App India, Sarkari Naukri App, Competitive Exam App, Education AI App, Career Planning App 2026">
+<meta name="author" content="StiSkilli">
+<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+<meta name="googlebot" content="index, follow">
+<!-- VIEWPORT -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<!-- CANONICAL (APP LINK USED) -->
+<link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<!-- =========================
+     OPEN GRAPH (SOCIAL SEO)
+========================== -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="StiSkilli – Smart Career & Exam Guide 2026">
+<meta property="og:description" content="Download SkillAura AI App for Government Exams, AI Tools, Job Alerts, Education News & Career Guidance. One App – All Future Solutions.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
+<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<meta property="og:site_name" content="StiSkilli">
+<!-- =========================
+     TWITTER / X SEO
+========================== -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="StiSkilli – Future Career & Exam Guide">
+<meta name="twitter:description" content="AI powered Government Exam, Job & Career Guide App. Download SkillAura AI from Google Play Store.">
+<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<!-- =========================
+     APP DEEP LINK SEO
+========================== -->
+<meta name="application-name" content="StiSkilli">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="theme-color" content="#F4C430">
+<!-- ANDROID APP INDEXING -->
+<link rel="alternate" href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
+<!-- =========================
+     STRUCTURED DATA (JSON-LD)
+========================== -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "MobileApplication",
+  "name": "StiSkilli",
+  "operatingSystem": "Android",
+  "applicationCategory": "EducationApplication",
+  "description": "StiSkilli is a smart Tech-powered career & exam guidance app for Government Jobs, AI Tools, Education, Private Jobs and Latest Recruitment in India.",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "INR"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.9",
+    "ratingCount": "100000"
+  },
+  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
+}
+</script>
+
+<!-- =========================
+     PERFORMANCE & AI SEARCH
+========================== -->
+<meta name="referrer" content="strict-origin-when-cross-origin">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="telephone=no">
+
+<!-- =========================
+     FAVICON
+========================== -->
+<link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
